[iOS] REGRESSION (r167039): WebKit incorrectly sets a background process assertion state when displaying a PDF https://bugs.webkit.org/show_bug.cgi?id=131860 <rdar://problem/16631282>

Reviewed by Tim Horton.

We were basing our process assertion state on whether or not the
process had a WKContentView in a window, but when displaying a PDF
we've removed the WKContentView from the window. Base this decision
instead on whether or not the WKWebView is in the window.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView didMoveToWindow]):
* UIProcess/ios/PageClientImplIOS.mm:
(WebKit::PageClientImpl::isViewInWindow):

Canonical link: https://commits.webkit.org/149932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167512 268f45cc-cd09-0410-ab3c-d52691b4dbfc